--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -139,6 +139,7 @@
                 { "name": "DYNAWO_LIBXML_HOME", "value" : "${workspaceFolder}/../dynawo/build-code/deploy/Debug/dynawo" },
                 { "name": "DYNAWO_NICSLU_INSTALL_DIR", "value" : "${workspaceFolder}/../dynawo/build-code/deploy/Debug/dynawo" },
                 { "name": "LD_LIBRARY_PATH", "value" : "${env:LD_LIBRARY_PATH}:${workspaceFolder}/build-code/install/3rdParty/Debug/gperftools/lib:${workspaceFolder}/build-code/install/3rdParty/Debug/mpich/lib:${workspaceFolder}/build-code/install/dynawo-algorithms/Debug/lib:${workspaceFolder}/../dynawo/build-code/deploy/Debug/dynawo/lib:${workspaceFolder}/build-code/build/dynawo-algorithms/Debug/sources/Test" },
+                { "name": "OPENMODELICAHOME", "value": "${workspaceFolder}/../dynawo/build-code/deploy/Debug/dynawo/OpenModelica"},
                 { "name": "PATH", "value": "${env:PATH}:${workspaceFolder}/../dynawo/build-code/deploy/Debug/dynawo/OpenModelica/bin" }
             ],
             "externalConsole": false,
