#133 Update Critical Time Calculation Implementation
Commit squash
Put branch up-to-date and fix issues in PR
Add unittest and nrt tests and change dichotomy functionning
Add CTC launch in launch.json
Change endPar by parName in CriticalTimeCalculation and add new attribute mode
Add Possibity to launch multiples scenarios
Add logs
Check if Dyd ID in Dyd File
Fix multiprocessing and PR feedbacks
Update Documentation for CTC
fix PR feedbacks
fix PR feedbacks and change logs
fix PR feedbacks
remove lastMessageError

Signed-off-by: Erwann GOASGUEN <erwann.goasguen_externe@rte-france.com>

--- a/.gitignore
+++ b/.gitignore
@@ -51,6 +51,20 @@ nrt/data/IEEE14/MC*/finalState
 nrt/data/IEEE14/MC*/result.zip
 nrt/data/IEEE14/MC*/*.dyd
 nrt/data/IEEE14/MC*/criteria*
+nrt/data/IEEE14/CTC*/IEEE14*
+nrt/data/IEEE14/CTC*/*.dmp
+nrt/data/IEEE14/CTC*/*.iidm
+nrt/data/IEEE14/CTC*/*.xml
+nrt/data/IEEE14/CTC*/dynawo.log
+nrt/data/IEEE14/CTC*/*.par
+nrt/data/IEEE14/CTC*/timeLine
+nrt/data/IEEE14/CTC*/timeline
+nrt/data/IEEE14/CTC*/logs
+nrt/data/IEEE14/CTC*/constraints
+nrt/data/IEEE14/CTC*/finalState
+nrt/data/IEEE14/CTC*/result.zip
+nrt/data/IEEE14/CTC*/*.dyd
+nrt/data/IEEE14/CTC*/criteria*
 nrt/data/*/*/*/outputs*/
 nrt/output
 *.pyc
