--- a/sources/Common/CMakeLists.txt
+++ b/sources/Common/CMakeLists.txt
@@ -53,6 +53,7 @@ set(DYN_ALGO_COMMON_SOURCES
   DYNLoadIncreaseResult.cpp
   DYNMultiProcessingContext.cpp
   DYNCriticalTimeCalculation.cpp
+  DYNCriticalTimeResult.cpp
   ${CPP_KEYS}
   )
 
@@ -64,6 +65,7 @@ set(DYN_ALGO_COMMON_HEADERS
   DYNLoadIncreaseResult.h
   DYNMultiProcessingContext.h
   DYNCriticalTimeCalculation.h
+  DYNCriticalTimeResult.h
   ${INCLUDE_KEYS}
   )
 
@@ -86,6 +88,7 @@ target_include_directories(dynawo_algorithms_Common
 
 target_link_libraries(dynawo_algorithms_Common
   Dynawo::dynawo_Common
+  Dynawo::dynawo_ModelerCommon
   $<$<STREQUAL:${USE_MPI},YES>:MPI::MPI_CXX>
   )
 
