--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -39,6 +39,40 @@
             ]
         },
         {
+            "name": "(gdb) Launch DynawoAlgorithms - CTC",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/build-code/install/dynawo-algorithms/Debug/bin/dynawoAlgorithms",
+            "args": [ "--simulationType", "CTC", "--input", "fic_MULTIPLE.xml", "--output", "results.xml", "--directory", "${workspaceFolder}/nrt/data/IEEE14/CTC/files" ],
+            "stopAtEntry": false,
+            "cwd": "${workspaceFolder}",
+            "environment": [
+                { "name": "DYNAWO_ALGORITHMS_LOCALE", "value" : "en_GB" },
+                { "name": "DYNAWO_INSTALL_DIR", "value" : "${workspaceFolder}/../dynawo/build-code/deploy/Debug/dynawo" },
+                { "name": "DYNAWO_DDB_DIR", "value" : "${workspaceFolder}/../dynawo/build-code/deploy/Debug/dynawo/ddb" },
+                { "name": "DYNAWO_RESOURCES_DIR", "value" : "${workspaceFolder}/build-code/install/dynawo-algorithms/Debug/share:${workspaceFolder}/../dynawo/build-code/deploy/Debug/dynawo/share:${workspaceFolder}/build-code/install/dynawo-algorithms/Debug/share/xsd:${workspaceFolder}/../dynawo/build-code/deploy/Debug/dynawo/share/xsd" },
+                { "name": "DYNAWO_DICTIONARIES", "value" : "dictionaries_mapping" },
+                { "name": "DYNAWO_USE_XSD_VALIDATION", "value" : "false" },
+                { "name": "DYNAWO_LIBIIDM_EXTENSIONS", "value" : "${workspaceFolder}/../dynawo/build-code/deploy/Debug/dynawo/lib" },
+                { "name": "IIDM_XML_XSD_PATH", "value" : "${workspaceFolder}/../dynawo/build-code/deploy/Debug/dynawo/share/iidm/xsd/" },
+                { "name": "LD_LIBRARY_PATH", "value" : "${env:LD_LIBRARY_PATH}:${workspaceFolder}/build-code/install/3rdParty/Debug/gperftools/lib:${workspaceFolder}/build-code/install/3rdParty/Debug/mpich/lib:${workspaceFolder}/build-code/install/dynawo-algorithms/Debug/lib:${workspaceFolder}/../dynawo/build-code/deploy/Debug/dynawo/lib" }
+            ],
+            "externalConsole": false,
+            "MIMode": "gdb",
+            "setupCommands": [
+                {
+                    "description": "Activer l'impression en mode Pretty pour gdb",
+                    "text": "-enable-pretty-printing",
+                    "ignoreFailures": true
+                },
+                {
+                    "description": "Définir la version désassemblage sur Intel",
+                    "text": "-gdb-set disassembly-flavor intel",
+                    "ignoreFailures": true
+                }
+            ]
+        },
+        {
             "name": "(gdb) Launch unittest: MultipleJobs",
             "type": "cppdbg",
             "request": "launch",
