--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -136,7 +136,7 @@ jobs:
   distribution-windows:
     if: github.event_name != 'workflow_dispatch' || inputs.perform-windows
     name: Distribution Windows (${{ matrix.use-mpi.text }})
-    runs-on: windows-2019
+    runs-on: windows-2022
     strategy:
       matrix:
         use-mpi:
@@ -185,7 +185,7 @@ jobs:
             set "MSMPI_LIB32=C:\Program Files (x86)\Microsoft SDKs\MPI\Lib\x86\"
             set "MSMPI_LIB64=C:\Program Files (x86)\Microsoft SDKs\MPI\Lib\x64\"
           )
-          call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
+          call "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
           call util\windows\dynawo-algorithms verbose build || exit /b 1
           call util\windows\dynawo-algorithms verbose distrib-headers distrib || exit /b 1
 
